@@ -1,5 +1,13 @@
 2010-01-18  Robert Millan  <rmh.grub@aybabtu.com>
 
+	* include/grub/term.h (grub_term_register_input,
+	grub_term_register_output): Check return of terminal init()
+	routines, and abort if errors are raised.
+
+	* commands/terminal.c: Update copyright year.
+
+2010-01-18  Robert Millan  <rmh.grub@aybabtu.com>
+
 	* commands/terminal.c (grub_cmd_terminal_input)
 	(grub_cmd_terminal_output): Check return of terminal init()
 	routines, and abort if errors are raised.
